Refatorado código de criação de agendamentos. Corrigido erro em view_computer.html que estava fazendo com que os agendamentos não aparecessem.
Problema de criação do agendamento ainda persiste.

--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -156,10 +156,10 @@
 	                            <img class="ico_secao" src="{{script_name}}/static/imagens/ico_big_clock.gif" />
 	                            <span class="label"><strong>Agendamentos:</strong><br/>
 	                                <a href="{{script_name}}/computer/{{comp.id}}/procedure/{{proc.id}}/schedule/new"><img src="/static/imagens/ico_plus.gif" /></a></span>
-	                            {% if not p.schedule_set.count %}
+	                            {% if not proc.schedule_set.count %}
 	                            <span class="value">(vazio)</span>
 	                            {% endif %}
-	                            {% for sched in p.schedule_set.all %}
+	                            {% for sched in proc.schedule_set.all %}
 	                            <span class="value">
 	                                Tipo: {{ sched.type }}
                                     <ul>
