Separei a funcionalidade de restore em 4 passos. Passo 0: Selecionar Computador Passo 1: Selecionar Procedimento Passo 2: Selecionar Data Passo 3: Selecionar Arquivos e Detalhes
Restore está acontecendo todo dentro de uma única view, chamada new_restore.
Restore está utilizando dois arquivos de template até agora:
new_restore.html e new_tmp_restore_tree.html

Falta migrar javascript do arquivo new_tmp_restore.html para o arquivo new_restore.html

Ainda faltam muitas decisões de design para o wizard de restore.

--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -20,8 +20,8 @@
                 <h1><a href="{{script_name}}/" title="Home">Linconet - Tencnologia Estratégica</a></h1>
                 <div id="main_menu" class="menu">
                     <ul class="links">
-                        <li {% if request.META.PATH_INFO|contains:"/computer" %}class="active"{% endif %}><a href="{{script_name}}/backup" title="">Backup</a></li>
-                        <li class=""><a href="{{script_name}}/restore" title="">Restore</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/backup" %}class="active"{% endif %}><a href="{{script_name}}/backup" title="">Backup</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/restore" %}class="active"{% endif %}><a href="{{script_name}}{{restore_prefix}}/restore/new" title="">Restore</a></li>
                         <li {% if request.META.PATH_INFO|contains:"/stats" %}class="active"{% endif %}><a href="{{script_name}}/stats" title="">Estatísticas</a></li>
                         <li {% if request.META.PATH_INFO|contains:"/config" %}class="active"{% endif %}><a href="{{script_name}}/config/edit" title="">Configurações</a></li>
                     </ul>
