Trocando imagens da restauracao e adicioanndo imagens do Wizard Backup.

--- a/trunk/templates/bkp/restore_steps.html
+++ b/trunk/templates/bkp/restore_steps.html
@@ -1,4 +1,4 @@
-<div class="passos">
+<div class="nr_passos passos">
     <div class="passo passo1 {% ifequal restore_step 0 %}on{% endifequal %}">
         1. Computador
     </div>
