Adicionando o jquery.cookie.js em todas as páginas.

--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -10,6 +10,7 @@
 
 		<link href="{{script_name}}/static/estilo.css" rel="stylesheet" />
 		<script type="text/javascript" src="{{script_name}}/static/jquery.js"></script>
+		<script type="text/javascript" src="{{script_name}}/static/jquery.cookie.js"></script>
 		<script type="text/javascript" src="{{script_name}}/static/main.js"></script>
 		
 		{% block headtags %}{% endblock %}
