--- a/trunk/templates/bkp/edit/edit_config.html
+++ b/trunk/templates/bkp/edit/edit_config.html
@@ -8,6 +8,7 @@
     <li><a href="{{script_name}}/config/password/edit"{% ifequal config_type 'password' %} class="ativo"{% endifequal %}>Senha</a></li>
     <li><a href="{{script_name}}/config/devices/edit"{% ifequal config_type 'devices' %} class="ativo"{% endifequal %}>Dispositivos Externos</a></li>
     <li><a href="{{script_name}}/config/restrictions/edit"{% ifequal config_type 'restrictions' %} class="ativo"{% endifequal %}>Restrições de Banda</a></li>
+    <li><a href="{{script_name}}/config/offsite/edit"{% ifequal config_type 'offsite' %} class="ativo"{% endifequal %}>Offsite</a></li>
 </ul>
 
 {% ifequal config_type 'global' %}
@@ -181,5 +182,33 @@
 	{% endif %}
 </div>
 {% endifequal %}
+
+{% ifequal config_type 'offsite' %}
+<h2>Backup Offsite</h2>
+
+<p>O backup offsite está "{% if offsite_on %}ATIVO{% endif %}{% if not offsite_on %}INATIVO{% endif %}".</p>
+
+{% if 0 %}
+<form action="{{script_name}}/device/" method="post">
+    <div class="fieldWrapper">
+        {{ devform.device_name.errors }}
+        {{ devform.device_name.label_tag }} {{ devform.device_name }}
+    </div>
+
+    <div class="fieldWrapper">
+        {{ devform.uuid.errors }}
+		{{ devform.uuid.label_tag }}	
+		<select name="uuid" id="id_uuid">
+			{% for value,choice in dev_choices %}
+			<option value="{{value}}" selected="selected">{{choice}} (UUID {{value}})</option>
+			{% endfor %}
+		</select>
+    </div>
+    <p><input type="submit" value="Salvar" /></p>
+</form>
+{% endif %}
+
+{% endifequal %}
+
 
 {% endblock %}
