--- a/trunk/templates/bkp/edit/edit_config.html
+++ b/trunk/templates/bkp/edit/edit_config.html
@@ -208,6 +208,16 @@
 </form>
 {% endif %}
 
+<form action="{{script_name}}/offsite/" method="post">
+    {% for field in offsiteform %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field }}
+        </div>
+    {% endfor %}
+    <p><input type="submit" value="Salvar" /></p>
+</form>
+
 {% endifequal %}
 
 
