"Adicionados novos atributos para NetworkConfig bem como um field novo para validar o MAC Address."

--- a/trunk/templates/bkp/edit/edit_network_info.html
+++ b/trunk/templates/bkp/edit/edit_network_info.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="titulo_botoes">
-<h3>Informações de Rede</h3>
+<h3>Debug de Informações da Rede</h3>
 </div>
 <div class="bloco_texto">
 <p>Nome da Interface</p>
@@ -11,6 +11,7 @@
 <p>Endereço Broadcast: {{broadcast_address}}</p>
 <p>Netmask: {{netmask}}</p>
 </div>
+
 
 
 <div class="titulo_botoes">
